# weather-underground

./: Cargo.toml  readme.md
cli/: Cargo.toml  readme.md
cli/src/: main.rs
influxdb-bridge/: Cargo.toml  Dockerfile  multiarch.Dockerfile
influxdb-bridge/src/: influx.rs  main.rs  server.rs  settings.rs
