[package]
name = "weather-underground-cli"
description = "Weather Underground parser cli"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "readme.md"
homepage = "https://github.com/jdrouet/weather-underground"
repository = "https://github.com/jdrouet/weather-underground"
keywords = ["weather", "parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2" }
env_logger = "0.7"
log = "0.4"
tokio = { version = "0.2", features = ["macros"] }
weather-underground = { path = "../library" }